--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.21.1",
+    "flowbite": "^2.5.2",
     "mongoose": "^8.8.1",
     "mongosh": "^2.3.3",
     "node": "^22.11.0",
