--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
@@ -19,6 +20,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "flash": "^1.1.0",
     "flowbite": "^2.5.2",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
