--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "mongoose": "^8.8.1",
     "mongosh": "^2.3.3",
     "node": "^22.11.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7",
     "router": "^1.3.8",
+    "socket.io": "^4.8.1",
     "tailwindcss": "^3.4.14"
   }
 }
